[tool.poetry]
name = "reloadradar"
version = "0.1.0"
description = ""
authors = ["Kenan <kenan.altaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
Django = "^4.2.6"
requests-html = "^0.10.0"
pandas = "^2.1.1"
djangorestframework = "^3.14.0"
markdown = "^3.5"
django-filter = "^23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = "reloadradar"

sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DJANGO",
    "DATASCIENCE",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
known_django = "django"
known_datascience = "pandas,numpy"
import_heading_future = "Future Libraries"
import_heading_stdlib = "Standard Libraries"
import_heading_thirdparty = "Third Party Libraries"
import_heading_django = "Django Libraries"
import_heading_datascience = "Data Science Libraries"
import_heading_firstparty = "Project Modules"
import_heading_localfolder = "App Modules"
